[package]
name = "mothbus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5.11", features = ["original-uri"] }
axum-extra = { version = "0.3.6", features = ["cookie"] }
axum-macros = "0.2.3"
chrono = { version = "0.4.19", features = ["serde"] }
color-eyre = "0.6.1"
handlebars = "4.3.1"
html-escape = "0.2.11"
http = "0.2.8"
moka = { version = "0.9.0", features = ["future"] }
rand = "0.8.5"
serde = { version = "1.0.138", features = ["derive"] }
sqlx = { version = "0.6.0", features = ["runtime-tokio-rustls", "mysql", "sqlite", "chrono"] }
tokio = { version = "1.19.2", features = ["full"] }
toml = "0.5.9"
tower-http = { version = "0.3.4", features = ["full"] }
tracing = "0.1.35"
tracing-subscriber = "0.3.14"
