[package]
name = "mothbus"
version = "1.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5.11", features = ["original-uri"] }
axum-extra = { version = "0.3.6", features = ["cookie"] }
axum-macros = "0.2.3"
chrono = { version = "0.4.19", features = ["serde"] }
color-eyre = "0.6.1"
handlebars = "4.3.1"
html-escape = "0.2.11"
http = "0.2.8"
jsonwebtoken = "8.1.1"
moka = { version = "0.9.0", features = ["future"] }
once_cell = "1.14.0"
rand = "0.8.5"
reqwest = { version = "0.11.11", features = ["json", "rustls-tls"], default_features = false }
scraper = "0.13.0"
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"
sqlx = { version = "0.6.0", features = ["runtime-tokio-rustls", "mysql", "chrono"] }
tokio = { version = "1.19.2", features = ["full"] }
toml = "0.5.9"
tower = "0.4.13"
tower-http = { version = "0.3.4", features = ["full"] }
tower-layer = "0.3.1"
tracing = "0.1.35"
tracing-subscriber = "0.3.14"

[features]
default = ["secret-ban-evasion"]

# Unlocks a panel for tracking down ban evaders, source code kept secret for our advantage
secret-ban-evasion = []
